updated version to 2.1.1